; ModuleID = '/home/carl/AnghaBench/linux/drivers/virt/vboxguest/extr_vboxguest_core.c_vbg_ioctl_chk.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/virt/vboxguest/extr_vboxguest_core.c_vbg_ioctl_chk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vbg_ioctl_hdr = type { i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vbg_ioctl_hdr*, i64, i64)* @vbg_ioctl_chk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vbg_ioctl_chk(%struct.vbg_ioctl_hdr* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.vbg_ioctl_hdr*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.vbg_ioctl_hdr* %0, %struct.vbg_ioctl_hdr** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load %struct.vbg_ioctl_hdr*, %struct.vbg_ioctl_hdr** %5, align 8
  %9 = getelementptr inbounds %struct.vbg_ioctl_hdr, %struct.vbg_ioctl_hdr* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = sext i32 %10 to i64
  %12 = load i64, i64* %6, align 8
  %13 = add i64 8, %12
  %14 = icmp ne i64 %11, %13
  br i1 %14, label %23, label %15

15:                                               ; preds = %3
  %16 = load %struct.vbg_ioctl_hdr*, %struct.vbg_ioctl_hdr** %5, align 8
  %17 = getelementptr inbounds %struct.vbg_ioctl_hdr, %struct.vbg_ioctl_hdr* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = sext i32 %18 to i64
  %20 = load i64, i64* %7, align 8
  %21 = add i64 8, %20
  %22 = icmp ne i64 %19, %21
  br i1 %22, label %23, label %26

23:                                               ; preds = %15, %3
  %24 = load i32, i32* @EINVAL, align 4
  %25 = sub nsw i32 0, %24
  store i32 %25, i32* %4, align 4
  br label %27

26:                                               ; preds = %15
  store i32 0, i32* %4, align 4
  br label %27

27:                                               ; preds = %26, %23
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
